--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -6,5 +6,10 @@
         <item name="android:textColor">#000000</item>
         <item name="android:forceDarkAllowed">false</item>
     </style>
+        <!-- Adds the splash screen definition -->
+    <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:statusBarColor">@color/splashscreen_bg</item>
+        <item name="android:background">@drawable/splash_screen</item>
+    </style>
 
 </resources>
